<resources>
    <string name="app_name">BloodBank</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="links">links</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">SEND</string>
    <string name="search_donor">Search Donor</string>
    <string name="chat_room">Chat Room</string>
    <string name="events">Events</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign in</string>
    <string name="new_user_click_here_to_register">New User ? Click here to Register</string>
    <string name="register">Register</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="enter_pin_code">Enter Pin Code</string>
    <string name="sign_up">Sign up</string>
    <string name="already_a_member_click_here">Already a Member Click Here !</string>
    <string name="blood_donation_camp">Blood donation camp</string>
    <string name="vizag">vizag</string>
    <string name="date_20_02_2018">Date: 20/02/2018</string>
    <string name="select_date">Select Date</string>
    <string name="location">Location</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="signout">Sign Out</string>
    <string name="no_internet_connection_available">No Internet Connection Available</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_description">Enter Description</string>
    <string name="last_blood_donation_date">Last Blood Donation Date</string>
    <string name="save">save</string>
    <string name="enter_age">Enter Age</string>
    <string name="forgot_password_click_here">Forgot Password ? Click here</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="close">Close</string>
    <string name="last_blood_donation">Last Donation</string>
    <string name="no_events_to_display">No Events to Display</string>
    <string name="welcome_message">Welcome</string>
    <string name="health_benefits">Health Benefits</string>
    <string name="donor_deferral">Donor Deferral</string>

    <array name="blood">
        <item>Select Your Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </array>
    <string-array name="links">
        <item> http://rotarybloodbank.org/</item>
        <item>http://www.indianblooddonors.in/</item>
        <item>http://indianbloodbank.com/</item>
        <item>http://www.bloodbankonline.org/</item>
        <item>http://www.blooddonator.com/</item>
    </string-array>
</resources>

