<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="2dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_gravity="center"
            android:hint="@string/select_date"
            android:textColor="#000"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageViewupdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:src="@drawable/ic_date_range_red_36dp"
            android:contentDescription="@string/app_name" />
    </LinearLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorPrimary"

            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/editLocation"
                android:hint="@string/enter_location"
                android:padding="10dp"
                android:enabled="false"
                android:inputType="textCapWords"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


    <EditText
        android:id="@+id/eventupdate"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:background="@drawable/text"
        android:ems="10"
        android:padding="10dp"
        android:enabled="false"
        android:gravity="top"
        android:hint="@string/enter_description"
        android:inputType="textMultiLine|textCapWords"
        tools:ignore="Autofill" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button

            android:id="@+id/btnEventupdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit"
            android:textStyle="bold"
            android:textColor="#fff"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/button_border_solid"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnEventdelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginEnd="5dp"
            android:background="@drawable/button_border_solid"
            android:text="@string/cancel"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>