<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:id="@+id/activity_login"
    android:background="@color/colorPrimary">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:ems="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:layout_marginTop="40dp"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="24sp"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:hint="@string/enter_email"
                    android:padding="10dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:ems="01"
                    android:inputType="textPassword"
                    android:hint="@string/enter_password"
                    android:padding="10dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:layout_marginTop="15dp"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_user_click_here_to_register"
                android:gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Forgot Password ? Click here"
                android:gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"/>



        </LinearLayout>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="10dp"
            android:layout_gravity="center|top"
            android:src="@drawable/ico"
            android:background="@drawable/circlershape"
            android:contentDescription="@string/app_name" />
    </FrameLayout>
</LinearLayout>
