<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:background="#fff"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center|top"
                    android:background="@drawable/circlershape"
                    android:backgroundTint="#ff4e50"
                    android:contentDescription="@string/app_name"
                    android:padding="16dp"/>

                <TextView
                    android:id="@+id/bloodgr"
                    android:layout_marginTop="27dp"
                    android:layout_marginLeft="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="35sp"
                    android:textColor="@color/white"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingLeft="20dp">

                <TextView
                    android:id="@+id/welcomeView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily=""
                    android:gravity="center"
                    android:text="@string/welcome_message"
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/nameView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">


            <LinearLayout
                android:id="@+id/donarLayout"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_video_1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:src="@drawable/searchblood" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/white" />


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/search_donor"
                    android:textColor="@android:color/white"
                    android:textSize="19sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/chatLayout"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"

                android:background="@drawable/bg_video_2"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:src="@drawable/chatroom" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/white" />


                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="center"
                    android:text="@string/chat_room"
                    android:textColor="@android:color/white"
                    android:textSize="19sp" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">


            <LinearLayout
                android:id="@+id/eventsLayout"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_video_3"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:src="@drawable/event" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="@string/events"
                        android:textColor="@android:color/white"
                        android:textSize="19sp" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/updatedate"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_video_4"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:src="@drawable/ic_date_range_black_24dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/updatedate1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="@string/last_blood_donation"
                        android:textColor="@android:color/white"
                        android:textSize="19sp" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">


            <LinearLayout
                android:id="@+id/healthtipsLayout"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_video_1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:src="@drawable/ic_tip" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/white" />


                <TextView
                    android:id="@+id/healthtips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/health_benefits"
                    android:textColor="@android:color/white"
                    android:textSize="19sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/donordefferalLayout"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"

                android:background="@drawable/bg_video_2"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:src="@drawable/ic_content_paste_black_24dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/donordefferal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="center"
                    android:text="@string/donor_deferral"
                    android:textColor="@android:color/white"
                    android:textSize="19sp" />

            </LinearLayout>
        </LinearLayout>



    </LinearLayout>
    </ScrollView>

</androidx.core.widget.NestedScrollView>
